[package]
name = "gpu_mm"
version = "0.1.0"
edition = "2021"

[profile.release]
lto = true

[dependencies]
aligned_box = "0.3.0"
crossbeam = "0.8.4"
crossbeam-channel = "0.5.13"
crossbeam-deque = "0.8.5"
crossbeam-queue = "0.3.11"
crossbeam-utils = "0.8.20"
cudarc = { version = "0.11.6", features = ["cuda-12050"]}
image = "0.25.1"
num_cpus = "1.16.0"
rand = "0.8.5"
thiserror = "1.0.61"
