[package]
name = "gpu_mm"
version = "0.1.0"
edition = "2021"

[profile.release]
lto = true

[dependencies]
cudarc = { version = "0.11.6", features = ["cuda-12050"]}
image = { version = "0.25.1" , default-features = false, features = ["default-formats"] }
num_cpus = "1.16.0"
rand = "0.8.5"
rayon = "1.10.0"
thiserror = "1.0.61"
